Added handler to handle unknown command request